# GMMK

./: .gitignore  CMakeLists.txt  ModJson.cs  file.json
CSharp/: CMakeLists.txt  ExtensionBase.cs  base.cs
CSharp/src/: DependencySort.cs  ModJson.cs  ModLoader.cs
CSharp/src/Models/: Additions.cs  CustomProperty.cs  InjectionLocation.cs  InjectionPoint.cs  InjectionRelativity.cs  Mixin.cs  ModInfo.cs  ModJson.cs  Object.cs  ResourceLocations.cs  Room.cs  Script.cs
Cpp/: CMakeLists.txt
Cpp/include/: modloader.h
Cpp/src/: dllmain.cpp  modloader.cpp  proxydll.cpp
init/: CMakeLists.txt
init/src/: dllmain.cpp
patcher/: CMakeLists.txt
patcher/src/: patcher.cpp
src/: dllmain.cpp  proxydll.cpp
